Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17230

[C++] Fix minor bugs in Substrait to ExecPlan conversion

    XMLWordPrintableJSON

Details

    Description

      • The return type of DeserializePlan is wrong: it should be shared_ptr<ExecPlan>, else we get a use-after-free.
      • Errors are ignored where they shouldn't be: you can get a half-constructed plan instead of an error.
      • A stateful callback is called twice, leading to invalid options being passed.

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m