ARROW-17230: [C++] Fix DeserializePlan, add additional option validation (#13728)

- DeserializePlan's signature was a guaranteed use-after-free
- Check that the write options are actually filled out
- Don't call the consumer factory twice per declaration
- Don't ignore plan construction errors
- Actually attempt to run the plans we make

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: Weston Pace <weston.pace@gmail.com>